채팅 버그 수정(채팅방 입장 메세지 중복 버그)

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -196,7 +196,7 @@
                             android:shadowColor="@color/black"
                             android:shadowDx="-7.0"
                             android:shadowDy="7.0"
-                            android:text="Real-time Queueing"
+                            android:text="Real-time Room"
                             android:textColor="@color/black"
                             android:textSize="18sp" />
 
