--- a/app/src/main/res/layout/profile_list.xml
+++ b/app/src/main/res/layout/profile_list.xml
@@ -69,7 +69,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/shape5"
-            android:text="Evaluate"
+            android:text="Rate"
             android:textColor="@color/black"
             android:textSize="12sp"></Button>
     </LinearLayout>
