--- a/app/src/main/res/layout/room_list.xml
+++ b/app/src/main/res/layout/room_list.xml
@@ -27,7 +27,7 @@
             android:gravity="center"
             android:text="Pork Back-bone Stew"
             android:textColor="@color/white"
-            android:textSize="10sp">
+            android:textSize="20sp">
         </TextView>
     </FrameLayout>
     <LinearLayout
@@ -62,14 +62,15 @@
                 android:gravity="start">
                 <TextView
                     android:id="@+id/tv_roomName"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Guys, let's eat WRYYYY!!!!!"
-                    android:maxLength="14"
+                    android:maxLines="1"
                     android:layout_marginLeft="4dp"
                     android:textSize="12sp"
                     android:paddingTop="6dp"
-                    android:paddingBottom="6dp">
+                    android:paddingBottom="6dp"
+                    android:ellipsize="end">
                 </TextView>
             </LinearLayout>
         </LinearLayout>
