--- a/app/src/main/res/layout/profile_list.xml
+++ b/app/src/main/res/layout/profile_list.xml
@@ -5,7 +5,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="68dp"
         android:layout_weight="0.1"
         android:orientation="horizontal"
         android:layout_margin="6dp"
@@ -14,10 +14,9 @@
         android:weightSum="1">
         <ImageView
             android:id="@+id/iv_profile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/imageshape"
-            android:src="@drawable/profile1"><!--둥글게 : java파일 roomfoodpic.clipToOutline = true추가-->
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@drawable/imageshape"><!--둥글게 : java파일 roomfoodpic.clipToOutline = true추가-->
         </ImageView>
         <TextView
             android:id="@+id/tv_name"
