--- a/app/src/main/res/layout/activity_record.xml
+++ b/app/src/main/res/layout/activity_record.xml
@@ -113,17 +113,15 @@
                     android:text="Number of people ate together : "
                     android:textSize="16dp"
                     android:textColor="@color/black"/>
-                <!--
                 <TextView
                     android:id="@+id/tv_peopleNum"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="2dp"
                     android:ellipsize="end"
-                    android:text=""
+                    android:text="3"
                     android:textSize="16dp"
                     android:textColor="@color/black"/>
-                    -->
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -187,10 +185,16 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
-                        <!--리사이클뷰
-
-                        -->
-                        <include layout="@layout/profile_list"/>
+                        <!--recyclerview: 많은 수의 데이터 집합을, 제한된 영역 내에서 유연하게(flexible) 표시할 수 있도록 만들어주는 위젯-->
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/rv"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:scrollbarFadeDuration="0"
+                            android:scrollbarSize="5dp"
+                            android:scrollbarThumbVertical="@android:color/darker_gray"
+                            android:scrollbars="vertical">
+                        </androidx.recyclerview.widget.RecyclerView>
                     </LinearLayout>
 
                 </ScrollView>
