--- a/app/src/main/res/layout/realtime_view.xml
+++ b/app/src/main/res/layout/realtime_view.xml
@@ -78,7 +78,8 @@
                             android:layout_marginLeft="4dp"
                             android:textSize="12sp"
                             android:paddingTop="6dp"
-                            android:paddingBottom="6dp">
+                            android:paddingBottom="6dp"
+                            android:ellipsize="end">
                         </TextView>
                     </LinearLayout>
                 </LinearLayout>
@@ -109,11 +110,12 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="대동집"
-                            android:maxLength="30"
+                            android:maxLines="1"
                             android:layout_marginLeft="4dp"
                             android:textSize="12sp"
                             android:paddingTop="6dp"
-                            android:paddingBottom="6dp">
+                            android:paddingBottom="6dp"
+                            android:ellipsize="end">
                         </TextView>
                     </LinearLayout>
                 </LinearLayout>
