--- a/app/src/main/res/layout/record_list.xml
+++ b/app/src/main/res/layout/record_list.xml
@@ -37,19 +37,18 @@
             android:layout_marginLeft="6dp"
             android:layout_marginRight="12dp"
             android:layout_gravity="center"
-            android:layout_weight="0.4"
-            android:gravity="left">
+            android:layout_weight="0.4">
 
             <TextView
                 android:id="@+id/tv_restaurant"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:gravity="center"
                 android:maxLength="30"
                 android:padding="2dp"
                 android:text="Sausagident"
                 android:textColor="@color/black"
-                android:textSize="16dp" />
+                android:textSize="16dp"/>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
