--- a/app/src/main/res/layout/room_list.xml
+++ b/app/src/main/res/layout/room_list.xml
@@ -62,7 +62,7 @@
                 android:gravity="start">
                 <TextView
                     android:id="@+id/tv_roomName"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Guys, let's eat WRYYYY!!!!!"
                     android:maxLines="1"
@@ -101,11 +101,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Master of rice soup"
-                    android:maxLength="12"
+                    android:maxLines="1"
                     android:layout_marginLeft="4dp"
                     android:textSize="12sp"
                     android:paddingTop="6dp"
-                    android:paddingBottom="6dp">
+                    android:paddingBottom="6dp"
+                    android:ellipsize="end">
                 </TextView>
             </LinearLayout>
         </LinearLayout>
