--- a/app/src/main/res/layout/sidebar_view.xml
+++ b/app/src/main/res/layout/sidebar_view.xml
@@ -280,8 +280,15 @@
                     android:background="@drawable/shape3"
                     android:layout_weight="0.8">
 
-                    <include layout="@layout/record_list"/>
-
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_record"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scrollbarFadeDuration="0"
+                        android:scrollbarSize="5dp"
+                        android:scrollbarThumbVertical="@android:color/darker_gray"
+                        android:scrollbars="vertical">
+                    </androidx.recyclerview.widget.RecyclerView>
 
                 </LinearLayout>
 
