--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -53,7 +53,7 @@
                         android:layout_gravity="right"
                         android:orientation="vertical">
                         <TextView
-                            android:id="@+id/tv_peopleNum"
+                            android:id="@+id/tv_guestNum"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_margin="4dp"
