--- a/app/src/main/res/layout/notification_view.xml
+++ b/app/src/main/res/layout/notification_view.xml
@@ -50,7 +50,7 @@
             android:orientation="horizontal"></LinearLayout>
 
         <Button
-            android:id="@+id/btn_clearall"
+            android:id="@+id/btn_clear"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
