--- a/app/src/main/res/layout/activity_record.xml
+++ b/app/src/main/res/layout/activity_record.xml
@@ -73,6 +73,7 @@
                     android:ellipsize="end"
                     android:text="18/12/2022"
                     android:textSize="16dp"
+                    android:maxLength="10"
                     android:textColor="@color/black"/>
             </LinearLayout>
             <LinearLayout
